[project]
name = "bonsai-api-client"
dynamic = ["version"]
description = "Shared API client used by Bonsai services (audit, notification, etc.)."
requires-python = ">=3.11"
authors = [
    { name = "Markus Johansson", email = "markus.h.johansson@skane.se" }
]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests>=2.28",
    "pydantic>=1.10",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "mypy",
]
tests = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "api_client.__version__"}
