[project]
name = "bonsai-libs"
dynamic = ["version"]
description = "Shared API client used by Bonsai services (audit, notification, etc.)."
requires-python = ">=3.11"
authors = [
    { name = "Markus Johansson", email = "markus.h.johansson@skane.se" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",

]
dependencies = [
    "requests>=2.28",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "mypy",
]
tests = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "bonsai_libs.__version__"}

[tool.setuptools_scm]
write_to = "src/bonsai_libs/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.black]
target-version = ["py311"]
line-length = 100
exclude = "/(venv|.venv|build|dist|.git)/"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["bonsai_libs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
